feat: UI updates

--- a/styles/_components/_buttons.scss
+++ b/styles/_components/_buttons.scss
@@ -12,6 +12,8 @@
   background-color: #fff83c;
   border-radius: 1.563rem;
   font-size: 0.938rem;
+  overflow: hidden;
+
   p {
     color: #16270c;
     font-weight: 700;
@@ -32,6 +34,7 @@
   border-radius: 1.563rem;
   font-size: 0.938rem;
   font-weight: 700;
+  overflow: hidden;
 
   p {
     color: #16270c;
@@ -52,6 +55,7 @@
   background-color: #fff83c;
   border-radius: 1.563rem;
   font-size: 0.938rem;
+  overflow: hidden;
 
   p {
     color: #16270c;
